# src/controller/books.controller.js
@@ -24,10 +24,24 @@ const createBooks = async (req, res) => {
 };
 
 
+const getBooksAlls = async (req, res) => {
+    try {
+        const gerBooksAll = await Books.findAll();
+        res.status(200).json({
+            message: "http ok",
+            data: gerBooksAll
+        })
+
+    } catch (err) {
+        console.error(err);
+        res.status(500).json({ message: "Internal Server Error" });
+    }
+}
 
 
 module.exports = {
-    createBooks
+    createBooks,
+    getBooksAlls
 }
 
 
